@@ -81,6 +81,14 @@
         <scope>test</scope>
     </dependency>
 
+    <!-- Mockito Inline pour Java 25 -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-inline</artifactId>
+        <version>5.2.0</version>
+        <scope>test</scope>
+    </dependency>
+
 </dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -114,6 +122,14 @@
         <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+            </configuration>
         </plugin>
 
     </plugins>
